<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nexmo SMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="api_key">Nexmo API Key</string>
    <string name="api_secret">Nexmo API Secret</string>
    <string name="originator_id">Sender-Id</string>
    <string name="destination_id">Destination number</string>
    <string name="msg_content">Message content</string>
    <string name="send">Send!</string>
    <string name="response_title">Response</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_settings">Save</string>
    <string name="silent">Silent?</string>

</resources>
