<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/originator_id"
        android:hint="@string/originator_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/destination_id"
        android:hint="@string/destination_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_below="@id/originator_id"/>

    <EditText
        android:id="@+id/msg_content"
        android:hint="@string/msg_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destination_id"/>

    <Button
        android:id="@+id/send"
        android:hint="@string/send"
        android:onClick="send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@id/msg_content"/>

    <TextView
        android:id="@+id/response_title"
        android:text="@string/response_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/send"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/response_title">
        <TextView
            android:id="@+id/response_body"
            android:isScrollContainer="true"
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>


</RelativeLayout>
