<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pandatech.nexmosms.settings">

 <EditText
     android:id="@+id/api_key_settings"
     android:hint="@string/api_key"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />

 <EditText
     android:id="@+id/api_secret_settings"
     android:hint="@string/api_secret"
     android:layout_below="@id/api_key_settings"
     android:inputType="textPassword"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_settings"
        android:text="@string/save_settings"
        android:layout_below="@id/api_secret_settings"
        android:layout_marginTop="40sp"
        android:onClick="save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
